[package]
name = "micro_ecs"
version = "0.1.0"
edition = "2021"

[features]
default = ["bus_width_ptr"]

bus_width_ptr = []
bus_width_u8 = []
bus_width_u16 = []
bus_width_u32 = []
bus_width_u64 = []

[dependencies]
hashbrown = "0.14.2"
casey = "0.4.0"
fortuples = "0.9.1"
unique-type-id = "1.3.0"
unique-type-id-derive = "1.3.0"
uninit = { version = "0.6.2", default-features = false }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
itertools = { version = "0.12.0", default-features = false }